feat: jdk8风格调整为jdk21风格