@@ -48,7 +48,7 @@ public class JobDefinition {
     }
 
     private static void requireText(String value, String field) {
-        if (value == null || value.trim().isEmpty()) throw new IllegalArgumentException(field + " is required");
+        if (value == null || value.isBlank()) throw new IllegalArgumentException(field + " is required");
     }
 
     /**
