@@ -13,7 +13,6 @@ import com.amazonaws.services.s3.model.GetObjectMetadataRequest;
 import com.amazonaws.services.s3.model.GetObjectRequest;
 import com.amazonaws.services.s3.model.ListObjectsV2Request;
 import com.amazonaws.services.s3.model.ListObjectsV2Result;
-import com.amazonaws.services.s3.model.ObjectListing;
 import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.amazonaws.services.s3.model.PartETag;
 import com.amazonaws.services.s3.model.PutObjectRequest;
@@ -191,7 +190,7 @@ public class CephStorageProvider implements StorageProvider {
     @Override
     public ListObjectsResult list(ListObjectsRequest request) {
         String actualBucket = bucketName(config, request.getBucketName());
-        String prefix = request.getPrefix() == null || request.getPrefix().trim().isEmpty()
+        String prefix = request.getPrefix() == null || request.getPrefix().isBlank()
                 ? null : buildObjectKey(config, request.getPrefix());
         try {
             ListObjectsV2Request listRequest = new ListObjectsV2Request()
@@ -354,7 +353,7 @@ public class CephStorageProvider implements StorageProvider {
         if (length >= 0) {
             metadata.setContentLength(length);
         }
-        if (request.getContentType() != null && !request.getContentType().trim().isEmpty()) {
+        if (request.getContentType() != null && !request.getContentType().isBlank()) {
             metadata.setContentType(request.getContentType());
         }
         for (Map.Entry<String, String> entry : request.getMetadata().entrySet()) {
@@ -365,7 +364,7 @@ public class CephStorageProvider implements StorageProvider {
 
     private ObjectMetadata buildMetadata(InitiateMultipartUploadRequest request) {
         ObjectMetadata metadata = new ObjectMetadata();
-        if (request.getContentType() != null && !request.getContentType().trim().isEmpty()) {
+        if (request.getContentType() != null && !request.getContentType().isBlank()) {
             metadata.setContentType(request.getContentType());
         }
         for (Map.Entry<String, String> entry : request.getMetadata().entrySet()) {
