@@ -89,6 +89,6 @@ public class SatokenEndpointMatcher {
      * @return 为空时返回 {@code true}
      */
     private boolean isBlank(String value) {
-        return value == null || value.trim().isEmpty();
+        return value == null || value.isBlank();
     }
 }
