@@ -1,5 +1,7 @@
 package com.peach.setting.service.impl;
 
+import lombok.RequiredArgsConstructor;
+
 import com.github.pagehelper.PageHelper;
 import com.github.pagehelper.PageInfo;
 import com.peach.common.IDGeneratorUtil;
@@ -28,7 +30,6 @@ import org.springframework.stereotype.Indexed;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import jakarta.annotation.Resource;
 import java.util.List;
 
 /**
@@ -40,13 +41,12 @@ import java.util.List;
 @Slf4j
 @Indexed
 @Service
+@RequiredArgsConstructor
 public class MultiMessageServiceImpl implements IMultiMessageService {
 
-    @Resource
-    private LanguageDao languageDao;
+        private final LanguageDao languageDao;
 
-    @Resource
-    private MultiMessageDao multiMessageDao;
+        private final MultiMessageDao multiMessageDao;
 
     @Override
     public PageResult<LanguageVO> languagePageList(LanguageQO qo) {
@@ -162,7 +162,7 @@ public class MultiMessageServiceImpl implements IMultiMessageService {
 
     private String requireTenantId() {
         String tenantId = SecurityContextHolder.currentTenantId();
-        if (tenantId == null || tenantId.trim().isEmpty()) {
+        if (tenantId == null || tenantId.isBlank()) {
             throw new IllegalStateException("Current tenant context is missing");
         }
         return tenantId;
@@ -170,7 +170,7 @@ public class MultiMessageServiceImpl implements IMultiMessageService {
 
     private String requireOrgId() {
         String orgId = SecurityContextHolder.currentOrgId();
-        if (orgId == null || orgId.trim().isEmpty()) {
+        if (orgId == null || orgId.isBlank()) {
             throw new IllegalStateException("Current organization context is missing");
         }
         return orgId;
